adaptation de l'affichage de tous les clients

--- a/src/main/resources/templates/affichagetousClients.html
+++ b/src/main/resources/templates/affichagetousClients.html
@@ -7,10 +7,12 @@
 </head>
 <body>
 <table border="1">
+    <th>ID</th>
     <th>NOM</th>
     <th>PRENOM</th>
     <th>TELEPHONE</th>
     <tr th:each="unClient : ${mesClients}">
+        <td th:text="${unClient.idclient}"/>
         <td th:text="${unClient.nom}"/>
         <td th:text="${unClient.prenom}"/>
         <td th:text="${unClient.tel}"/>
